--- a/test.html
+++ b/test.html
@@ -14,7 +14,7 @@
       background-size: cover;
       background-position: center;
       height: 300px;
-      color: white;
+      color: lightgrey;
       
     }
 
