--- a/experiment6.html
+++ b/experiment6.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="experiment6.css">
+    <link rel="stylesheet" href="ex6.css">
     <title>E-Commerce Product Page</title>
 </head>
 <body>
     <div class="container">
         <div class="header">ShopEasy</div>
         <div class="card">
-            <img src="/Screenshot 2025-11-06 at 4.12.22 PM.png" width="100" alt="T-shirt">
-        <div class="prname">
+            <img src="/WhatsApp Image 2025-12-10 at 11.53.20_4274f31e.jpg" alt="T-shirt">
+        <div >
             Classic Cotton T-Shirt
         </div>
         <div class="description">Soft, breathable cotton, Regular Fit, Available in multiple colors.</div>
